--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body style="background-color: black;">
-    <script src="loops.js"></script>
+    <script src="objLit.js"></script>
 </body>
 </html>
